src/main/java/il/ac/bgu/cs/formalmethodsintro/base/nanopromela/NanoPromelaParser.java
// Generated from NanoPromela.g4 by ANTLR 4.5.1
package il.ac.bgu.cs.formalmethodsintro.base.nanopromela;

import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NanoPromelaParser extends Parser {

    static {
        RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    public static final int T__0 = 1,
            T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, T__10 = 11, T__11 = 12, OR = 13, AND = 14, EQ = 15, NEQ = 16, GT = 17, LT = 18, GTEQ = 19, LTEQ = 20, PLUS = 21, MINUS = 22, MULT = 23, DIV = 24,
            MOD = 25, POW = 26, NOT = 27, SCOL = 28, ASSIGN = 29, OPAR = 30, CPAR = 31, OBRACE = 32, CBRACE = 33, TRUE = 34, FALSE = 35, INT = 36, VARNAME = 37, CHANNAME = 38, ZEROCAPACITYCHANNAME = 39, COMMENT = 40, SPACE = 41, OTHER = 42;
    public static final int RULE_hsreadstmt = 0,
            RULE_hswritestmt = 1, RULE_joined = 2, RULE_onesided = 3, RULE_spec = 4, RULE_stmt = 5, RULE_ifstmt = 6, RULE_dostmt = 7, RULE_assstmt = 8, RULE_chanreadstmt = 9, RULE_chanwritestmt = 10, RULE_atomicstmt = 11, RULE_skipstmt = 12,
            RULE_option = 13, RULE_intexpr = 14, RULE_boolexpr = 15;
    public static final String[] ruleNames = {"hsreadstmt", "hswritestmt", "joined", "onesided", "spec", "stmt", "ifstmt", "dostmt", "assstmt", "chanreadstmt", "chanwritestmt", "atomicstmt", "skipstmt", "option", "intexpr", "boolexpr"};

    private static final String[] _LITERAL_NAMES = {null, "'?'", "'|'", "'if'", "'fi'", "'do'", "'od'", "':='", "'atomic'", "'skip'", "'::'", "'->'", "'size('", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'!'",
        "';'", "'='", "'('", "')'", "'{'", "'}'", "'true'", "'false'"};
    private static final String[] _SYMBOLIC_NAMES = {null, null, null, null, null, null, null, null, null, null, null, null, null, "OR", "AND", "EQ", "NEQ", "GT", "LT", "GTEQ", "LTEQ", "PLUS", "MINUS", "MULT", "DIV", "MOD", "POW", "NOT", "SCOL", "ASSIGN", "OPAR", "CPAR",
        "OBRACE", "CBRACE", "TRUE", "FALSE", "INT", "VARNAME", "CHANNAME", "ZEROCAPACITYCHANNAME", "COMMENT", "SPACE", "OTHER"};
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "NanoPromela.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public NanoPromelaParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class HsreadstmtContext extends ParserRuleContext {

        public TerminalNode ZEROCAPACITYCHANNAME() {
            return getToken(NanoPromelaParser.ZEROCAPACITYCHANNAME, 0);
        }

        public TerminalNode VARNAME() {
            return getToken(NanoPromelaParser.VARNAME, 0);
        }

        public HsreadstmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_hsreadstmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterHsreadstmt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitHsreadstmt(this);
            }
        }
    }

    public final HsreadstmtContext hsreadstmt() throws RecognitionException {
        HsreadstmtContext _localctx = new HsreadstmtContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_hsreadstmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(32);
                match(ZEROCAPACITYCHANNAME);
                setState(33);
                match(T__0);
                setState(35);
                _la = _input.LA(1);
                if (_la == VARNAME) {
                    {
                        setState(34);
                        match(VARNAME);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class HswritestmtContext extends ParserRuleContext {

        public TerminalNode ZEROCAPACITYCHANNAME() {
            return getToken(NanoPromelaParser.ZEROCAPACITYCHANNAME, 0);
        }

        public IntexprContext intexpr() {
            return getRuleContext(IntexprContext.class, 0);
        }

        public HswritestmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_hswritestmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterHswritestmt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitHswritestmt(this);
            }
        }
    }

    public final HswritestmtContext hswritestmt() throws RecognitionException {
        HswritestmtContext _localctx = new HswritestmtContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_hswritestmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(37);
                match(ZEROCAPACITYCHANNAME);
                setState(38);
                match(NOT);
                setState(40);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << MINUS) | (1L << OPAR) | (1L << INT) | (1L << VARNAME))) != 0)) {
                    {
                        setState(39);
                        intexpr(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class JoinedContext extends ParserRuleContext {

        public TerminalNode EOF() {
            return getToken(NanoPromelaParser.EOF, 0);
        }

        public HsreadstmtContext hsreadstmt() {
            return getRuleContext(HsreadstmtContext.class, 0);
        }

        public HswritestmtContext hswritestmt() {
            return getRuleContext(HswritestmtContext.class, 0);
        }

        public JoinedContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_joined;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterJoined(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitJoined(this);
            }
        }
    }

    public final JoinedContext joined() throws RecognitionException {
        JoinedContext _localctx = new JoinedContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_joined);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(50);
                switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                    case 1: {
                        {
                            setState(42);
                            hsreadstmt();
                            setState(43);
                            match(T__1);
                            setState(44);
                            hswritestmt();
                        }
                    }
                    break;
                    case 2: {
                        {
                            setState(46);
                            hswritestmt();
                            setState(47);
                            match(T__1);
                            setState(48);
                            hsreadstmt();
                        }
                    }
                    break;
                }
                setState(52);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OnesidedContext extends ParserRuleContext {

        public TerminalNode EOF() {
            return getToken(NanoPromelaParser.EOF, 0);
        }

        public HsreadstmtContext hsreadstmt() {
            return getRuleContext(HsreadstmtContext.class, 0);
        }

        public HswritestmtContext hswritestmt() {
            return getRuleContext(HswritestmtContext.class, 0);
        }

        public OnesidedContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_onesided;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterOnesided(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitOnesided(this);
            }
        }
    }

    public final OnesidedContext onesided() throws RecognitionException {
        OnesidedContext _localctx = new OnesidedContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_onesided);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(56);
                switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                    case 1: {
                        setState(54);
                        hsreadstmt();
                    }
                    break;
                    case 2: {
                        setState(55);
                        hswritestmt();
                    }
                    break;
                }
                setState(58);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SpecContext extends ParserRuleContext {

        public StmtContext stmt() {
            return getRuleContext(StmtContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(NanoPromelaParser.EOF, 0);
        }

        public SpecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_spec;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterSpec(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitSpec(this);
            }
        }
    }

    public final SpecContext spec() throws RecognitionException {
        SpecContext _localctx = new SpecContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_spec);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                stmt(0);
                setState(61);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StmtContext extends ParserRuleContext {

        public IfstmtContext ifstmt() {
            return getRuleContext(IfstmtContext.class, 0);
        }

        public DostmtContext dostmt() {
            return getRuleContext(DostmtContext.class, 0);
        }

        public AssstmtContext assstmt() {
            return getRuleContext(AssstmtContext.class, 0);
        }

        public ChanreadstmtContext chanreadstmt() {
            return getRuleContext(ChanreadstmtContext.class, 0);
        }

        public ChanwritestmtContext chanwritestmt() {
            return getRuleContext(ChanwritestmtContext.class, 0);
        }

        public AtomicstmtContext atomicstmt() {
            return getRuleContext(AtomicstmtContext.class, 0);
        }

        public SkipstmtContext skipstmt() {
            return getRuleContext(SkipstmtContext.class, 0);
        }

        public List<StmtContext> stmt() {
            return getRuleContexts(StmtContext.class);
        }

        public StmtContext stmt(int i) {
            return getRuleContext(StmtContext.class, i);
        }

        public StmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterStmt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitStmt(this);
            }
        }
    }

    public final StmtContext stmt() throws RecognitionException {
        return stmt(0);
    }

    private StmtContext stmt(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        StmtContext _localctx = new StmtContext(_ctx, _parentState);
        StmtContext _prevctx = _localctx;
        int _startState = 10;
        enterRecursionRule(_localctx, 10, RULE_stmt, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(71);
                switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                    case 1: {
                        setState(64);
                        ifstmt();
                    }
                    break;
                    case 2: {
                        setState(65);
                        dostmt();
                    }
                    break;
                    case 3: {
                        setState(66);
                        assstmt();
                    }
                    break;
                    case 4: {
                        setState(67);
                        chanreadstmt();
                    }
                    break;
                    case 5: {
                        setState(68);
                        chanwritestmt();
                    }
                    break;
                    case 6: {
                        setState(69);
                        atomicstmt();
                    }
                    break;
                    case 7: {
                        setState(70);
                        skipstmt();
                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(78);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) {
                            triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new StmtContext(_parentctx, _parentState);
                                pushNewRecursionContext(_localctx, _startState, RULE_stmt);
                                setState(73);
                                if (!(precpred(_ctx, 1))) {
                                    throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                }
                                setState(74);
                                match(SCOL);
                                setState(75);
                                stmt(2);
                            }
                        }
                    }
                    setState(80);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class IfstmtContext extends ParserRuleContext {

        public List<OptionContext> option() {
            return getRuleContexts(OptionContext.class);
        }

        public OptionContext option(int i) {
            return getRuleContext(OptionContext.class, i);
        }

        public IfstmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_ifstmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterIfstmt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitIfstmt(this);
            }
        }
    }

    public final IfstmtContext ifstmt() throws RecognitionException {
        IfstmtContext _localctx = new IfstmtContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_ifstmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(81);
                match(T__2);
                setState(83);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(82);
                            option();
                        }
                    }
                    setState(85);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == T__9);
                setState(87);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DostmtContext extends ParserRuleContext {

        public List<OptionContext> option() {
            return getRuleContexts(OptionContext.class);
        }

        public OptionContext option(int i) {
            return getRuleContext(OptionContext.class, i);
        }

        public DostmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dostmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterDostmt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitDostmt(this);
            }
        }
    }

    public final DostmtContext dostmt() throws RecognitionException {
        DostmtContext _localctx = new DostmtContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_dostmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(89);
                match(T__4);
                setState(91);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(90);
                            option();
                        }
                    }
                    setState(93);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == T__9);
                setState(95);
                match(T__5);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AssstmtContext extends ParserRuleContext {

        public TerminalNode VARNAME() {
            return getToken(NanoPromelaParser.VARNAME, 0);
        }

        public IntexprContext intexpr() {
            return getRuleContext(IntexprContext.class, 0);
        }

        public AssstmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assstmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterAssstmt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitAssstmt(this);
            }
        }
    }

    public final AssstmtContext assstmt() throws RecognitionException {
        AssstmtContext _localctx = new AssstmtContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_assstmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                match(VARNAME);
                setState(98);
                match(T__6);
                setState(99);
                intexpr(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ChanreadstmtContext extends ParserRuleContext {

        public TerminalNode CHANNAME() {
            return getToken(NanoPromelaParser.CHANNAME, 0);
        }

        public TerminalNode VARNAME() {
            return getToken(NanoPromelaParser.VARNAME, 0);
        }

        public ChanreadstmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_chanreadstmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterChanreadstmt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitChanreadstmt(this);
            }
        }
    }

    public final ChanreadstmtContext chanreadstmt() throws RecognitionException {
        ChanreadstmtContext _localctx = new ChanreadstmtContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_chanreadstmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(101);
                match(CHANNAME);
                setState(102);
                match(T__0);
                setState(103);
                match(VARNAME);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ChanwritestmtContext extends ParserRuleContext {

        public TerminalNode CHANNAME() {
            return getToken(NanoPromelaParser.CHANNAME, 0);
        }

        public IntexprContext intexpr() {
            return getRuleContext(IntexprContext.class, 0);
        }

        public ChanwritestmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_chanwritestmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterChanwritestmt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitChanwritestmt(this);
            }
        }
    }

    public final ChanwritestmtContext chanwritestmt() throws RecognitionException {
        ChanwritestmtContext _localctx = new ChanwritestmtContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_chanwritestmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                match(CHANNAME);
                setState(106);
                match(NOT);
                setState(107);
                intexpr(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class AtomicstmtContext extends ParserRuleContext {

        public List<TerminalNode> VARNAME() {
            return getTokens(NanoPromelaParser.VARNAME);
        }

        public TerminalNode VARNAME(int i) {
            return getToken(NanoPromelaParser.VARNAME, i);
        }

        public List<IntexprContext> intexpr() {
            return getRuleContexts(IntexprContext.class);
        }

        public IntexprContext intexpr(int i) {
            return getRuleContext(IntexprContext.class, i);
        }

        public AtomicstmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_atomicstmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterAtomicstmt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitAtomicstmt(this);
            }
        }
    }

    public final AtomicstmtContext atomicstmt() throws RecognitionException {
        AtomicstmtContext _localctx = new AtomicstmtContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_atomicstmt);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(109);
                match(T__7);
                setState(110);
                match(OBRACE);
                setState(118);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(111);
                                match(VARNAME);
                                setState(112);
                                match(T__6);
                                setState(113);
                                intexpr(0);
                                setState(114);
                                match(SCOL);
                            }
                        }
                    }
                    setState(120);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
                }
                setState(121);
                match(VARNAME);
                setState(122);
                match(T__6);
                setState(123);
                intexpr(0);
                setState(124);
                match(CBRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SkipstmtContext extends ParserRuleContext {

        public SkipstmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_skipstmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterSkipstmt(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitSkipstmt(this);
            }
        }
    }

    public final SkipstmtContext skipstmt() throws RecognitionException {
        SkipstmtContext _localctx = new SkipstmtContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_skipstmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(126);
                match(T__8);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OptionContext extends ParserRuleContext {

        public BoolexprContext boolexpr() {
            return getRuleContext(BoolexprContext.class, 0);
        }

        public StmtContext stmt() {
            return getRuleContext(StmtContext.class, 0);
        }

        public OptionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_option;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).enterOption(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
                ((NanoPromelaListener) listener).exitOption(this);
            }
        }
    }

    public final OptionContext option() throws RecognitionException {
        OptionContext _localctx = new OptionContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_option);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(128);
                match(T__9);
                setState(129);
                boolexpr(0);
                setState(130);
                match(T__10);
                setState(131);
                stmt(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class IntexprContext extends ParserRuleContext {

        public Token op;

        public TerminalNode MINUS() {
            return getToken(NanoPromelaParser.MINUS, 0);
        }

        public List<IntexprContext> intexpr() {
            return getRuleContexts(IntexprContext.class);
        }

        public IntexprContext intexpr(int i) {
            return getRuleContext(IntexprContext.class, i);
        }

        public TerminalNode INT() {
            return getToken(NanoPromelaParser.INT, 0);
        }

        public TerminalNode CHANNAME() {
            return getToken(NanoPromelaParser.CHANNAME, 0);
        }

        public TerminalNode VARNAME() {
            return getToken(NanoPromelaParser.VARNAME, 0);
        }

        public TerminalNode OPAR() {
            return getToken(NanoPromelaParser.OPAR, 0);
        }

        public TerminalNode CPAR() {
            return getToken(NanoPromelaParser.CPAR, 0);
        }

        public TerminalNode POW() {
            return getToken(NanoPromelaParser.POW, 0);
        }

        public TerminalNode MULT() {
            return getToken(NanoPromelaParser.MULT, 0);
        }

        public TerminalNode DIV() {
            return getToken(NanoPromelaParser.DIV, 0);
        }

        public TerminalNode MOD() {
            return getToken(NanoPromelaParser.MOD, 0);
        }

        public TerminalNode PLUS() {
            return getToken(NanoPromelaParser.PLUS, 0);
        }

        public IntexprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_intexpr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof NanoPromelaListener) {
